# api-ocr

./: .env.example  .gitignore  README.md  SPEC.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: main.py  pyproject.toml
app/api/routes/: ocr.py
app/core/: config.py
app/schemas/: ocr.py
app/services/: ocr_service.py
docker/: Dockerfile
tests/: bench_lang.py  bench_ocr.py  bench_size.py  test_ocr.py  test_ocr_live.py
