[project]
name = "api-ocr"
version = "0.1.0"
description = "API para extracción de texto de imágenes y PDFs usando PaddleOCR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "paddlepaddle>=3.0.0",
    "paddleocr>=3.0.0",
    "pymupdf>=1.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "scalar-fastapi>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
